@@ -1,8 +1,8 @@
 ########################################################################
 #                                                                      #
-#               This software is part of the ast package               #
-#          Copyright (c) 1982-2012 AT&T Intellectual Property          #
-#          Copyright (c) 2020-2022 Contributors to ksh 93u+m           #
+#              This file is part of the ksh 93u+m package              #
+#          Copyright (c) 2022-2023 Contributors to ksh 93u+m           #
+#                    <https://github.com/ksh93/ksh>                    #
 #                      and is licensed under the                       #
 #                 Eclipse Public License, Version 2.0                  #
 #                                                                      #
@@ -10,9 +10,8 @@
 #      https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.html      #
 #         (with md5 checksum 84283fa8859daf213bdda5a9f8d1be1d)         #
 #                                                                      #
-#                  David Korn <dgk@research.att.com>                   #
+#                      Phi <phi.debian@gmail.com>                      #
 #                  Martijn Dekker <martijn@inlv.org>                   #
-#            Johnothan King <johnothanking@protonmail.com>             #
 #                                                                      #
 ########################################################################
 
@@ -20,19 +19,13 @@ PS1='$ '
 . "${SHTESTS_COMMON:-${0%/*}/_common}"
 
 # ======
-# Test for issue#324
-# 'err_''exit' is the name to use to avoid src/cmd/ksh93/tests/shtests
-# grep -c counting.
-
-# We don't want the alias (made by _common) instead we use our T function
-# that will reference 'err_''exit' function located in _common too.
-unalias 'err_''exit'
+# Test for https://github.com/ksh93/ksh/issues/324
 
 function T
-{ typeset l="$1" f="$2" x="$3" g=''
-  printf  -v g  "$f" 1 2 3 4 5 6 7 8 9 0
-  [ "$g" = "$x" ] || # src/cmd/ksh93/tests/shtest grep -c accounting
-  'err_''exit' "$l" "printf '$f'"
+{
+	typeset g
+	printf -v g "$2" 1 2 3 4 5 6 7 8 9 0
+	[[ $g == "$3" ]] || \err_exit "$1" "printf '$2': expected $(printf %q "$3"), got $(printf %q "$g")"
 }
 
 # This part was generated once, and can now be augmented with more test
@@ -44,7 +37,7 @@ x='1 2
 9 0
 '
 f='%s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='1 1
 2 2
@@ -58,7 +51,7 @@ x='1 1
 0 0
 '
 f='%s %1$s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='1 1
 2 2
@@ -72,7 +65,7 @@ x='1 1
 0 0
 '
 f='%1$s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='1 1
 2 2
@@ -86,7 +79,7 @@ x='1 1
 0 0
 '
 f='%1$s %1$s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='1 1 2 2
 3 3 4 4
@@ -95,7 +88,7 @@ x='1 1 2 2
 9 9 0 0
 '
 f='%1$s %s %s %2$s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='1 1 2 3
 4 4 5 6
@@ -103,7 +96,7 @@ x='1 1 2 3
 0 0  
 '
 f='%s %1$s %s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='1 1 2 2
 3 3 4 4
@@ -112,7 +105,7 @@ x='1 1 2 2
 9 9 0 0
 '
 f='%s %1$s %2$s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='2 1
 4 3
@@ -121,7 +114,7 @@ x='2 1
 0 9
 '
 f='%2$s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='2 1 2 1
 4 3 4 3
@@ -130,7 +123,7 @@ x='2 1 2 1
 0 9 0 9
 '
 f='%2$s %1$s %2$s %1$s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='2 1 1 2 1 2
 4 3 3 4 3 4
@@ -139,7 +132,7 @@ x='2 1 1 2 1 2
 0 9 9 0 9 0
 '
 f='%2$s %1$s %s %2$s %1$s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x=' 1 2
    3 4
@@ -148,7 +141,7 @@ x=' 1 2
 9 0
 '
 f='%*2$s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x=' 1 2
     4 5
@@ -156,7 +149,7 @@ x=' 1 2
  
 '
 f='%*2$.*3$s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='  1 2
      4 5
@@ -164,25 +157,25 @@ x='  1 2
  
 '
 f='%*3$.*2$s %s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='2   5
      7        0
 '
 f='%*s %*.*s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='2 0005
      7 000000000
 '
 f='%*d %*.*d\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='2.000000 5.0000
 7.000000 0.000000000
 '
 f='%*f %*.*f\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x=' 3 2 1
     6 5 4
@@ -190,14 +183,13 @@ x=' 3 2 1
   0
 '
 f='%3$*2$.*1$s %2$s %1$s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
+T $LINENO "$f" "$x"
 
 x='1 5
 6 0
 '
 f='%s %5$s\n'
-T $LINENO "$f" "$x" # err_exit src/cmd/ksh93/tests/shtests grep -c accounting
-
+T $LINENO "$f" "$x"
 
 # ======
 exit $((Errors<125?Errors:125))
