@@ -20,7 +20,7 @@
 #ifndef _SFIO_H
 #define _SFIO_H	1
 
-#define SFIO_VERSION	20230406L
+#define SFIO_VERSION	20230517L
 
 /*	Public header file for the sfio library
 **
@@ -64,7 +64,7 @@ struct _sffmt_s
 {	long		version;/* version of this structure		*/
 	Sffmtext_f	extf;	/* function to process arguments	*/
 	Sffmtevent_f	eventf;	/* process events			*/
-	Sffmtreload_f	reload;	/* reload argv with a new type/format	*/
+	Sffmtreload_f	reloadf;/* reload argv with a new type/format	*/
 
 	char*		form;	/* format string to stack		*/
 	va_list		args;	/* corresponding arg list		*/
